--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typescript-to-do",
+  "name": "angular2-to-do",
   "version": "1.0.0",
   "scripts": {
     "start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
@@ -19,13 +19,13 @@
     "@angular/platform-browser-dynamic": "2.4.0",
     "@angular/router": "3.4.0",
     "@angular/upgrade": "2.4.0",
+    "bootstrap": "3.3.6",
     "angular-in-memory-web-api": "0.3.1",
-    "bootstrap": "^3.3.6",
     "core-js": "2.4.1",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.1",
-    "systemjs": "0.19.27",
-    "zone.js": "0.7.2"
+    "zone.js": "0.7.2",
+    "systemjs": "0.19.27"
   },
   "devDependencies": {
     "bower-files": "3.11.3",
@@ -33,6 +33,7 @@
     "del": "2.2.0",
     "gulp": "3.9.1",
     "gulp-concat": "2.6.0",
+    "gulp-sass": "2.2.0",
     "gulp-shell": "0.5.2",
     "gulp-sourcemaps": "1.6.0",
     "gulp-uglify": "1.5.3",
@@ -41,5 +42,8 @@
     "lite-server": "2.2.2",
     "typescript": "2.2.2",
     "typings": "1.3.2"
-  }
+  },
+  "main": "gulpfile.js",
+  "author": "",
+  "description": ""
 }
